# Declarative-Language-Practice

./: .gitignore  README.md  package-lock.json  requirements.txt
backend/: main.py  openai_prompts.json
interface/: README.md  index.html  package-lock.json  package.json
interface/src/: App.tsx  index.css  main.tsx
interface/src/components/: AIFeedbackPrompt.tsx  AttributeCard.tsx  BehavioralDisplay.tsx  FeedbackPrompt.tsx  InitialPromptDisplay.tsx  ModelConfig.tsx  NewModelConfig.tsx  Transcript.tsx  TranscriptAnalysis.tsx  TranscriptDisplay.tsx
interface/src/components/pages/: Compensation.tsx  Condition1.tsx  Experimental.tsx  Feedback.tsx  InitialPromptAssistant.tsx  InterfaceIntroduction.tsx  PostStudyQuestionnaire.tsx  PreStudyQuestionnnaire.tsx  SetUp.tsx  TaskIntroduction.tsx
interface/src/consts/: attributes.ts  outputs.ts
src/expressive-face-server/: README.md  eyes.js  face-prestudy.html  face-testing.html  face.css  face.html  face2codePrompt.json  package-lock.json  package.json  server.js
src/nonverbal-recognition/: .env  head-nod-recognition  hume_test.py  stream.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/launch/: py_pubsub_launch.py
src/py_pubsub/py_pubsub/: conversation_logger.py  get_face_status_client.py  get_is_talking_client.py  intent_classifier.py  prompt_manager.py  robot_behavior_generator.py  robot_status_service.py  test_end.py  test_start.py  user_nod_recognition.py
src/py_pubsub/py_pubsub/audio_processing/: speech_to_text.py  text_to_speech.py
src/py_pubsub/py_pubsub/robot_controller/: robot_controller.py  robot_face_controller.py  robot_head_controller.py  robot_speaker_controller.py
src/py_pubsub/resources/: prompts.json
src/utils/: CMakeLists.txt  package.xml
src/utils/srv/: SetString.srv
