<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_pubsub</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sameerkhan@outlook.com">sameer</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>utils</exec_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
    
  <exec_depend>python3-pandas</exec_depend>

  <exec_depend>python-google-cloud-speech-pip</exec_depend>
  <exec_depend>google-cloud-speech</exec_depend>
  <exec_depend>python-google-cloud-bigquery-pip</exec_depend>
  <exec_depend>google-cloud-bigquery</exec_depend>
  <exec_depend>python-googleapi</exec_depend>
  <exec_depend>python-google-cloud-vision-pip</exec_depend>
  <exec_depend>google-cloud-vision</exec_depend>
  <exec_depend>python-google-cloud-texttospeech-pip</exec_depend>
  <exec_depend>google-cloud-texttospeech</exec_depend>

  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-sounddevice-pip</exec_depend>
  <exec_depend>sounddevice</exec_depend>

  <exec_depend>pathos</exec_depend>
  <exec_depend>python-requests</exec_depend>
  <exec_depend>python3-aiohttp</exec_depend>
  <exec_depend>aiohttp</exec_depend>
  <exec_depend>python3-openai-pip</exec_depend>
  <exec_depend>python-anyjson</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
